# finance-tools

./: .env  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  200.html  404.html  README.md  accounts.html  app.js  asset-manifest.json  babel.config.js  biome.json  budget.html  cypress.config.ts  hk.pkl  index.html  interest.html  jest.config.ts  mise.toml  next.config.js  next.config.ts  openapitools.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  privacy.html  server.js  stocks.html  tailwind.config.js  tailwind.config.ts  tax.html  tsconfig.json  wrangler.jsonc
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: backend.yml  deploy-backend.yml  deploy-frontend.yml  frontend.yml  main.yml  pull_request.yml  pullrequests.yml
cypress/component/: LoginState.cy.tsx
cypress/e2e/: LandingPage.cy.ts  account.cy.ts  budget.cy.ts  constants.ts  nav.cy.ts
cypress/mocks/: api.ts
cypress/support/: component.ts
finance-api/: Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.toml
finance-api/.cargo/: config.toml
finance-api/.sqlx/: query-08fc258ef49895af54bb1ddfdeafed162ff39a7f96d939b5bf724c72518a7d49.json  query-7aa1e1f1f597e2c230305fde4e0ce12189f15c33d128479e18ee29d00597cb73.json  query-95aaf1ba9e0f239e35eda6704b488234c4d66760c66b920d31e1b4470c5d6e5c.json  query-9730f177caa76f52f31eb7185f05f227ee4a8b0e9c3cf83b494af25f1f6ad69c.json  query-b4ad841d50431def6c2bc5b7dc4c4762e4321592d01ad362668964c1d37e3d59.json  query-f7aa14cd8efd5b0bf80e658336a6d8c987c35866714e234019857b5e26f8823e.json
finance-api/migrations/: 0001_initial.sql  0002_soft_delete.sql
finance-api/src/: account.rs  auth.rs  health.rs  lib.rs  openapi.rs  router.rs  state.rs
finance-api/src/account/: model.rs  route.rs  router.rs
finance-api/src/account/route/: delete.rs  get.rs  get_accounts.rs  patch.rs  post.rs
finance-api/src/account/route/entry/: post.rs
finance-api/src/auth/: claims.rs  config.rs  jwk.rs  jwk_repository.rs  mock_jwk.rs
finance-api/test/: account.test.ts  health.test.ts  test-data.sql  tsconfig.json  vitest.config.ts
finance-api/test/helpers/: d1.ts  miniflare.ts  token.ts  worker.ts
frontend/: .env  .env.development.local  cypress.config.ts  jest.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/pages/: _app.tsx  _document.tsx  accounts.tsx  budget.tsx  index.tsx  interest.tsx  privacy.tsx  stocks.tsx  tax.tsx
frontend/public/: manifest.json
frontend/src/: main.css
frontend/tests/: taxRates.test.ts
gh-auth/: README.md  app.js  package.json
pages/: _app.tsx  _document.tsx  accounts.tsx  budget.tsx  index.tsx  interest.tsx  privacy.tsx  stocks.tsx  tax.tsx
public/: index.html  manifest.json
src/: AccountOverview.tsx  App.tsx  index.tsx  main.css
src/api/: account.ts  auth.ts
src/components/: AddAccountModal.tsx  AddEntryModal.tsx  Cell.tsx  ClientOnly.tsx  DeleteButton.tsx  FileOptionMenu.tsx  IndividualGrowthGraph.tsx  SEO.tsx  SelectCurrency.tsx  Spinner.tsx  Table.tsx  TextPage.tsx
src/features/: AccountOverview.tsx  Footer.tsx  Header.tsx  Navigation.tsx  apiBase.ts
src/hooks/: useAsyncReducer.ts  useThemeDetector.ts
src/icons/: DeleteIcon.tsx  OpenFolderIcon.tsx  SaveIcon.tsx  SettingsIcon.tsx
src/models/: Account.ts  General.ts
src/services/: AccountService.ts  formulas.ts
src/utils/: colors.ts  converters.ts  date.ts  flux.ts  general.ts  githubAuth.ts  math.ts  storage.ts
static/css/: main.2bfda8b0.chunk.css  main.2bfda8b0.chunk.css.map  main.3924c90e.chunk.css  main.3924c90e.chunk.css.map  main.3c8be123.chunk.css  main.3c8be123.chunk.css.map  main.63175b5b.chunk.css  main.63175b5b.chunk.css.map  main.6bb4afde.chunk.css  main.6bb4afde.chunk.css.map  main.804231fc.chunk.css  (+5 more)
tests/: taxRates.test.ts
(+577 files in other folders)
