[package]
name = "finance-api"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Fleckenstein <oliverfl@live.dk>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.8", default-features = false }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
chrono = { version = "0.4.45", features = ["serde"] }
derive-getters = { version = "0.5.0" }
duplicate = { version = "2.0.1" }
http = { version = "1.4.2" }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt", "macros"] }
tower-service = { version = "0.3.3" }
tracing = { version = "0.1.44" }
worker = { version = "0.8", features = ["http", "axum"] }
worker-macros = { version = "0.8", features = ["http"] }
